fix scroll bar corner white space

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -46,6 +46,10 @@
     background:$darkBlue;
   }
 
+  &::-webkit-scrollbar-corner {
+    background: color(bg);
+  }
+
   @include tablet {
   }
 
